aws/aws_eks_poc/argocd/hello-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: hello-html
