aws/aws_eks_poc/argocd/hello-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx-svc
  namespace: default
spec:
  selector:
    app: hello-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
